<resources>
    <string name="app_name">Join-a-long</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>
    <string name="action_new_group">New Group</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab1title">List</string>
    <string name="tab2title">Map</string>
    <string name="tab3title">Contacts</string>
    <string name="title_activity_new_event">New Event</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        Address: %2$s
        <br/>
        Phone: %3$s
        <br/>
        Website: %4$s
    ]]>
    </string>
    <string name="event_title_hint">Add title</string>
    <string name="event_notes_hint">Add notes</string>
    <string name="action_save">Save</string>
    <string name="signin_button">Sign In</string>
    <string name="hint_search_location">Search location</string>
    <string name="text_after_event_title">" at"</string>
    <string name="text_after_event_owner">" is going to"</string>
    <string name="join_button_text">Join</string>
    <string name="title_activity_new_group">New Group</string>
    <string name="add_group_participants">Add Group Participants</string>
    <string name="search_contact_hint">Type contact email here</string>
    <string name="group_name_hint">Type group name here</string>
    <string name="button_group_member_add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_list_label">Groups</string>
    <string name="contacts_list_label">Contacts</string>
    <string name="new_contact_menu_label">New Contact</string>
    <string name="event_share_hint">Share with others</string>
    <string name="title_activity_share_event">Select Contacts</string>
    <string name="action_done">Done</string>
    <string name="action_next">Next</string>
    <string name="no_event_available">No available events. Add your plans and share.</string>
    <string name="empty_group_list_text">Create groups to easily share your events</string>
    <string name="empty_contact_list_text">Add a contact</string>
    <string name="title_activity_event_detail">Event Details</string>
    <string name="cancel_button_text">UnJoin</string>
    <string name="event_member_going">going</string>
    <string name="event_member_going_including_you">(+ you) going</string>
    <string name="menu_delete_title">Delete</string>
    <string name="title_activity_group_detail">Group Detail</string>
    <string name="menu_edit_title">Edit</string>
    <string name="contact_email_label">Email:</string>
    <string name="contact_detail_dialog_title">Contact Detail</string>
    <string name="ok_button_text">Ok</string>
    <string name="new_contact_dialog_title">New Contact</string>
    <string name="widget_name">Join-a-long Events</string>
    <string name="empty_list_text">No events.</string>
    <string name="title_activity_favorite_locations">Favorite Locations</string>
    <string name="action_favorite_locations">Favorite Locations</string>
    <string name="empty_view_no_locations">No locations</string>
    <string name="location_saved_string">Location saved</string>
    <string name="event_title_data_error">Please enter event title.</string>
    <string name="event_timing_data_error">Please correct event timing.</string>
    <string name="group_name_data_error">Please enter group name</string>
    <string name="min_group_member_data_error">Please add atleast one member to the group</string>
    <string name="new_event_menu_label">New Event</string>
    <string name="event_list_item_content_description1l">%1$s invited you to %2$s on %3$s at %4$s. Location of the event is %5$s. %6$d person is going.</string>
    <string name="event_list_item_content_description2l">%1$s invited you to %2$s on %3$s at %4$s. Location of the event is %5$s. %6$d people are going.</string>
    <string name="event_list_item_content_description1">%1$s invited you to %2$s on %3$s at %4$s. %5$d person is going.</string>
    <string name="event_list_item_content_description2">%1$s invited you to %2$s on %3$s at %4$s. %5$d people are going.</string>
    <string name="favorite_location_button">favorite location</string>
    <string name="event_location_content_description">location %1$s</string>
    <string name="event_start_date_content_description">start date %1$s</string>
    <string name="event_start_time_content_description">start time %1$s</string>
    <string name="event_end_date_content_description">end date %1$s</string>
    <string name="event_end_time_content_description">end time %1$s</string>
    <string name="event_notes_content_description">comments: %1$s</string>
    <string name="event_member_status_going_content_description">is %1$s</string>
    <string name="event_member_status_content_description">has not responded</string>
    <string name="event_member_no_response">no response</string>
    <string name="menu_delete_group">Delete Group</string>
    <string name="empty_event_list_text">No available events. Start by creating events and sharing with friends.</string>
    <string name="snapshots_incomplete_case_error">Incomplete case statement</string>
    <string name="sign_in_failed_msg">Sign in failed. Please try again.</string>
    <string name="title_activity_edit_event">Edit Event</string>
    <string name="place_selection_failed">"Place selection failed: "</string>
    <string name="menu_add_people">Add people</string>
    <string name="title_activity_edit_group">EditGroupActivity</string>
    <string name="user_not_exist_error">User doesn\'t exist</string>
    <string name="notification_title_for_msg">%1$s</string>
    <string name="notification_new_event">Shared a new event "%1$s".</string>
    <string name="notification_update_event">Updated the event "%1$s".</string>
    <string name="notification_delete_event">Cancelled the event "%1$s".</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_invite_friends">Send App Invite</string>
    <string name="title_invite_friends">App Invite</string>
    <string name="invite_subject">Hey, Check out "Join-a-long" App</string>
    <string name="summary_notification_title">%1$d new message</string>
    <string name="summary_notification_title_mm">%1$d new messages</string>
    <string name="summary_notification_new_event">%1$s shared a new event "%2$s".</string>
    <string name="summary_notification_update_event">%1$s updated the event "%2$s".</string>
    <string name="summary_notification_delete_event">%1$s cancelled the event "%2$s".</string>
    <string name="summary_notification_join_event">%1$s joined the event "%2$s".</string>
    <string name="appinvite_email">%%APPINVITE_LINK_PLACEHOLDER%%.
        I have been using it and like it a lot. We can share plans like park visits, movies, play dates etc easily and quickly.</string>

    <string name="facebook_application_id" translatable="false">1076963855735348</string>
</resources>
