<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.village.joinalong.ui.MainActivity">
    <item
        android:id="@+id/action_favorite_location"
        android:orderInCategory="201"
        android:title="@string/action_favorite_locations"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_invite"
        android:orderInCategory="202"
        android:title="@string/action_invite_friends"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="203"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="204"
        android:title="@string/action_signout"
        app:showAsAction="never" />
</menu>
