<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:minWidth="@dimen/dialog_fragment_min_width"
    android:paddingBottom="@dimen/std_margin"
    android:paddingLeft="@dimen/std_margin"
    android:paddingStart="@dimen/std_margin"
    android:paddingRight="@dimen/std_margin"
    android:paddingEnd="@dimen/std_margin"
    android:paddingTop="@dimen/std_margin"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/contact_image_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src = "@drawable/ic_account_circle_black_48dp"/>


            <TextView
                android:id="@+id/contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/std_margin"
                android:layout_marginStart="@dimen/std_margin"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/primary_text_size"
                android:textColor="@color/bodyTextColor"
                android:singleLine="true"
                android:ellipsize="end"
                />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/contact_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/primary_text_size"
                android:textColor="@color/bodyTextColor"
                android:singleLine="true"
                android:ellipsize="end"
                android:text ="@string/contact_email_label"
                />
            <TextView
                android:id="@+id/contact_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/std_margin"
                android:layout_marginStart="@dimen/std_margin"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/primary_text_size"
                android:textColor="@color/bodyTextColor"
                android:singleLine="true"
                android:ellipsize="end"
                />


        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:paddingTop="@dimen/std_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_delete_title"
            android:textColor="@color/colorPrimary"
            android:contentDescription="@string/menu_delete_title"
            style="?attr/borderlessButtonStyle"
            />
        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_button_text"
            android:textColor="@color/colorPrimary"
            android:contentDescription="@string/ok_button_text"
            style="?attr/borderlessButtonStyle"
            />
    </LinearLayout>

</LinearLayout>